Updated the hello world notebook.

--- a/examples/notebooks/D3L_hello_world.ipynb
+++ b/examples/notebooks/D3L_hello_world.ipynb
@@ -12,22 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "98d2e65f",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'numpy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-baf58105bf50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0md3l\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindexing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msimilarity_indexes\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mNameIndex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFormatIndex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mValueIndex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mEmbeddingIndex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDistributionIndex\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0md3l\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minput_output\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataloaders\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mPostgresDataLoader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mCSVDataLoader\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0md3l\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquerying\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery_engine\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mQueryEngine\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0md3l\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfunctions\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpickle_python_object\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0munpickle_python_object\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from d3l.indexing.similarity_indexes import NameIndex, FormatIndex, ValueIndex, EmbeddingIndex, DistributionIndex\n",
@@ -61,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6b257d79",
    "metadata": {},
    "outputs": [],
@@ -79,26 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "233cdbba",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'CSVDataLoader' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-b3cd4993b43a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# CSV data loader\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m dataloader = CSVDataLoader(\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mroot_path\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'/Users/alexteodor/Downloads/evaluation/groundTruth/'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m','\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m )\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'CSVDataLoader' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# CSV data loader\n",
     "dataloader = CSVDataLoader(\n",
-    "    root_path='/Users/alexteodor/Downloads/evaluation/groundTruth/',\n",
+    "    root_path='<path/to/the/CSV/root/>',\n",
     "    sep=','\n",
     ")"
    ]
@@ -109,7 +85,9 @@
    "metadata": {},
    "source": [
     "### Index creation\n",
-    "D3L uses five types of column similarity evidence and, therefore, five LSH indexes: name-based, format-based, value-based, embedding-based, and distribution-based. The last index type is characteristic to numerical columns and performs LSH indexing using the random projections hash function applied on the density-based histogram of values. This is different from the numerical approach proposed in the paper."
+    "D3L uses five types of column similarity evidence and, therefore, five LSH indexes: name-based, format-based, value-based, embedding-based, and distribution-based. The last index type is characteristic to numerical columns and performs LSH indexing using the random projections hash function applied on the density-based histogram of values. This is different from the numerical approach proposed in the paper.\n",
+    "\n",
+    "Note that the embedding index requires to downloading and loading into memory the pretrained FastText embedding model. This will be downloaded once in the working directory. The default gzipped English Common Crawl FastText model has 4.2 GB and its unzipped version has 6.7 GB."
    ]
   },
   {
@@ -118,14 +96,84 @@
    "id": "47f3ebcb",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Create new indexes\n",
+    "name_index = NameIndex(dataloader=dataloader)\n",
+    "pickle_python_object(name_index, './name.lsh')\n",
+    "print(\"Name: SAVED!\")\n",
+    "\n",
+    "format_index = FormatIndex(dataloader=dataloader)\n",
+    "pickle_python_object(format_index, './format.lsh')\n",
+    "print(\"Format: SAVED!\")\n",
+    "\n",
+    "value_index = ValueIndex(dataloader=dataloader)\n",
+    "pickle_python_object(value_index, './value.lsh')\n",
+    "print(\"Value: SAVED!\")\n",
+    "\n",
+    "embedding_index = EmbeddingIndex(dataloader=dataloader)\n",
+    "pickle_python_object(embedding_index, './embedding.lsh')\n",
+    "print(\"Embedding: SAVED!\")\n",
+    "\n",
+    "distribution_index = DistributionIndex(dataloader=dataloader)\n",
+    "pickle_python_object(distribution_index, './distribution.lsh')\n",
+    "print(\"Distribution: SAVED!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e1b7fd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Or load them from disk if they have been created\n",
+    "name_index = unpickle_python_object('./name.lsh')\n",
+    "format_index = unpickle_python_object('./format.lsh')\n",
+    "value_index = unpickle_python_object('./value.lsh')\n",
+    "embedding_index = unpickle_python_object('./embedding.lsh')\n",
+    "distribution_index = unpickle_python_object('./distribution.lsh')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d2c0530",
+   "metadata": {},
+   "source": [
+    "## Data searching\n",
+    "\n",
+    "Given a query table, each of the columns will be added to the relevant indexes and a top-k nearest neighbor search is performed for each query column on each index. The results are then aggregated as discussed in the paper, except for the aggregation of the five similarity scores which, in this example, is performed by a simple mean.\n",
+    "\n",
+    "If no aggregation is passed, each result will consist of a (result table name, five similarity scores) tuple. Otherwise, each result will consist of a (result table name, aggregated similarity score value) tuple. In the first case, the order of the score types corresponds to the order of the indexes passed to the query engine object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b48f06e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qe = QueryEngine(name_index, format_index, value_index, embedding_index, distribution_index)\n",
+    "results = qe.table_query(table=dataloader.read_table(table_name='TEgbBqq_Food_Hygiene_Data'),\n",
+    "                         aggregator=None,\n",
+    "                         k=10)\n",
+    "print(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cfb761f",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "python3.9",
    "language": "python",
-   "name": "python3"
+   "name": "python3.9"
   },
   "language_info": {
    "codemirror_mode": {
@@ -137,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
