Added GloVe embedding support.

--- a/examples/notebooks/D3L_hello_world.ipynb
+++ b/examples/notebooks/D3L_hello_world.ipynb
@@ -87,7 +87,7 @@
     "### Index creation\n",
     "D3L uses five types of column similarity evidence and, therefore, five LSH indexes: name-based, format-based, value-based, embedding-based, and distribution-based. The last index type is characteristic to numerical columns and performs LSH indexing using the random projections hash function applied on the density-based histogram of values. This is different from the numerical approach proposed in the paper.\n",
     "\n",
-    "Note that the embedding index requires to downloading and loading into memory the pretrained FastText embedding model. This will be downloaded once in the working directory. The default gzipped English Common Crawl FastText model has 4.2 GB and its unzipped version has 6.7 GB."
+    "Note that the embedding index requires to downloading and loading into memory the pretrained GloVe embedding vectors. These will be downloaded once in the working directory or int the configured cache directory. The default zipped embedding vector file has 1.7 GB and its unzipped version has 4.7 GB."
    ]
   },
   {
@@ -110,7 +110,7 @@
     "pickle_python_object(value_index, './value.lsh')\n",
     "print(\"Value: SAVED!\")\n",
     "\n",
-    "embedding_index = EmbeddingIndex(dataloader=dataloader)\n",
+    "embedding_index = EmbeddingIndex(dataloader=dataloader, index_cache_dir=\"./\")\n",
     "pickle_python_object(embedding_index, './embedding.lsh')\n",
     "print(\"Embedding: SAVED!\")\n",
     "\n",
@@ -154,16 +154,28 @@
    "outputs": [],
    "source": [
     "qe = QueryEngine(name_index, format_index, value_index, embedding_index, distribution_index)\n",
-    "results = qe.table_query(table=dataloader.read_table(table_name='TEgbBqq_Food_Hygiene_Data'),\n",
-    "                         aggregator=None,\n",
-    "                         k=10)\n",
-    "print(results)"
+    "results, extended_results = qe.table_query(table=dataloader.read_table(table_name='TEgbBqq_Food_Hygiene_Data'),\n",
+    "                                           aggregator=None, k=10, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "390fa512",
+   "metadata": {},
+   "source": [
+    "## Extracting table similarity scores for alternative usage\n",
+    "\n",
+    "Given a query table, one can extract the similarity scores that describe the relatedness relationship between the query and its neighbours and use these scores in other tasks. For example, these scores can be aggregated using a function of choice and the result can be construed as a distance between the tables, i.e., used in clustering.\n",
+    "\n",
+    "In the cell above `results` will be a collection of pairs, with each item containing a related (to the query table) table name and five similarity scores, one for each type of backend. All five scores are returned because no `aggregation` was used.\n",
+    "\n",
+    "The `verbose` parameter leads to the return of `extended_results` that, for each related table, offers a deeper view into column-level similarities. The format of each item of `extended_results` is (<*table_name*>, [((<*query_column_name*>, <*related_column_name*>), [*column_level_scores*])]). The order of the scores is given by the order of the backends passed to the `QueryEngine` object."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cfb761f",
+   "id": "e063147a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -171,9 +183,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3.9",
+   "display_name": "D3L",
    "language": "python",
-   "name": "python3.9"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
