Added example for individual index querying.

--- a/examples/notebooks/D3L_hello_world.ipynb
+++ b/examples/notebooks/D3L_hello_world.ipynb
@@ -154,7 +154,7 @@
    "outputs": [],
    "source": [
     "qe = QueryEngine(name_index, format_index, value_index, embedding_index, distribution_index)\n",
-    "results, extended_results = qe.table_query(table=dataloader.read_table(table_name='TEgbBqq_Food_Hygiene_Data'),\n",
+    "results, extended_results = qe.table_query(table=dataloader.read_table(table_name='tableA'),\n",
     "                                           aggregator=None, k=10, verbose=True)"
    ]
   },
@@ -173,9 +173,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bab7e738",
+   "metadata": {},
+   "source": [
+    "## Querying individual indexes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93a07165",
+   "metadata": {},
+   "source": [
+    "Occasionally, it may be useful to interrogate individual indexes. Before exemplifying the process for doing so, it is important to mention that each index stores in its buckets similar **columns**. In other words, every operation performed on individual indexes will operate at **column-level**.\n",
+    "\n",
+    "Every index inherits a *SimilarityIndex* base class that exposes a *query* method. The signature of the method and its docstring can be consulted in the *similarity_indexes* sub-package of *indexing*."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e063147a",
+   "id": "53597cfe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Name index query\n",
+    "results = name_index.query(query=\"<string>\", k=\"<integer>\") # The query arg should be a column name. Tokenization will be performed automatically.\n",
+    "\n",
+    "# Format index query\n",
+    "results = format_index.query(query=\"<list/set>\", k=\"<integer>\") # The query arg should be a collection of string values. The corresponding format descriptors will be extracted automatically.\n",
+    "\n",
+    "# Value index query\n",
+    "results = value_index.query(query=\"<list/set>\", k=\"<integer>\") # The query arg should be a collection of string values. Value pre-processing will be performed automatically.\n",
+    "\n",
+    "# Embeddings index query\n",
+    "results = embedding_index.query(query=\"<list/set>\", k=\"<integer>\") # The query arg should be a collection of string values. The corresponding embeddings will be extracted automatically.\n",
+    "\n",
+    "# Distribution index query\n",
+    "results = distribution_index.query(query=\"<list/set>\", k=\"<integer>\") # The query arg should be a collection of numerical values. The corresponding distribution will be extracted automatically."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1368ab8",
+   "metadata": {},
+   "source": [
+    "In each case of the above *k* is optional. If not passed all identified neighbours of the query will be returned.\n",
+    "\n",
+    "Lastly, each item in *results* will be a pair of the form *<(table_name.column_name, similarity_score)>*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bc7dd8d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -183,9 +234,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "D3L",
+   "display_name": "d3l",
    "language": "python",
-   "name": "venv"
+   "name": "d3l"
   },
   "language_info": {
    "codemirror_mode": {
